# pak-merger

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: windows-release-check.yml
assets/: EULA.en.md  EULA.ja.md  EULA.ko.md
assets/icon/: README.md
licenses/: repak-LICENSE-MIT.txt
profiles/: README.ko.md  README.md  example-game.profile.json
scripts/: build-release.ps1  collect-rust-licenses.ps1  generate-app-icon.py
src/: binary_asset.rs  cli.rs  control.rs  eula.rs  gui.rs  input.rs  lib.rs  main.rs  merge.rs  pak.rs  report.rs  resources.rs  types.rs
src/profiles/: external.rs  generic.rs  mod.rs  octopath_traveler_0.rs
src/profiles/octopath_traveler_0/: battle.rs  default.rs  enemy.rs  event.rs  game_text.rs  skill.rs
